bolding search result. also fixes a bug: search result node could be collapsed

--- a/style.css
+++ b/style.css
@@ -32,6 +32,10 @@ svg {
     display: none;
 }
 
+.selected-node {
+    font-weight: bold;
+}
+
 .foot {
     padding-top: 1%;
     text-align: center;
